# sqlmodel-mypy-plugin

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/sqlmodel_mypy/: __init__.py  persisted.py  plugin.py  transform.py
tests/: conftest.py  smoke_test.py  test_persisted_helpers.py  test_plugin_unit.py  test_transform_unit.py
tests/mypy/: test_mypy.py
tests/mypy/configs/: mypy-plugin-no-untyped.ini  mypy-plugin-pydantic-first.ini  mypy-plugin-pydantic-last.ini  mypy-plugin-strict-no-explicit-any.ini  mypy-plugin-strict-typed-execute.ini  mypy-plugin-strict.ini  mypy-plugin.ini  pyproject-plugin.toml
tests/mypy/modules/: aliased_joins.py  aliases.py  annotated_field_metadata.py  constructor.py  docs_parity_many_to_many_create_data.py  docs_parity_read_connected_data.py  docs_parity_relationship_attributes.py  docs_parity_update_patterns.py  execution_options.py  expression_typing_strict.py  expressions.py  field_sa_type.py  field_validation_alias.py  generics.py  getattr_column_property.py  inheritance.py  joins.py  label.py  many_to_many_relationships.py  mapped_fields.py  model_config.py  model_construct.py  nullable_defaults.py  persisted_helpers.py  relationship_comparators.py  relationship_expressions.py  relationships.py  select_varargs.py  selectinload.py  session_exec.py  session_execute_typed.py  session_get.py  table_dunders.py  table_model_awareness.py  table_via_model_config.py  tuple_expression.py  untyped_fields.py
tests/mypy/outputs/mypy-plugin-pydantic-first_ini/: relationships.py
tests/mypy/outputs/mypy-plugin-pydantic-last_ini/: relationships.py
tests/mypy/outputs/mypy-plugin-strict-typed-execute_ini/: session_execute_typed.py
tests/mypy/outputs/mypy-plugin-strict_ini/: aliases.py  annotated_field_metadata.py  constructor.py  docs_parity_many_to_many_create_data.py  docs_parity_read_connected_data.py  docs_parity_relationship_attributes.py  docs_parity_update_patterns.py  generics.py  joins.py  many_to_many_relationships.py  mapped_fields.py  model_construct.py  persisted_helpers.py  relationship_comparators.py  relationships.py  session_exec.py  table_model_awareness.py  table_via_model_config.py
tests/mypy/outputs/mypy-plugin_ini/: aliased_joins.py  aliases.py  constructor.py  execution_options.py  expressions.py  inheritance.py  joins.py  label.py  many_to_many_relationships.py  model_construct.py  nullable_defaults.py  relationship_expressions.py  relationships.py  select_varargs.py  untyped_fields.py
tests/mypy/outputs/pyproject-plugin_toml/: constructor.py
